--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-
-</LinearLayout>
+    android:layout_height="fill_parent">
+    
+	<de.chaos_darmstadt.schlafwandler.EnCam.Preview
+		android:id="@+id/preview"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
+	</de.chaos_darmstadt.schlafwandler.EnCam.Preview>
+	<Button 
+		android:layout_height="wrap_content" 
+		android:layout_width="wrap_content" 
+		android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true" 
+		android:text="@string/takePictureButton_Text" 
+		android:id="@+id/TakePictureButton"
+		android:onClick="onTakePictureButton">
+		</Button>
+</RelativeLayout>
