--- a/res/menu/mainmenu.xml
+++ b/res/menu/mainmenu.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:title="Select Keys" android:id="@+id/selectKeys"></item>
-<item android:id="@+id/preferences" android:title="Preferences"></item>
-<item android:id="@+id/about" android:title="@string/about"></item><item android:id="@+id/help" android:title="@string/help"></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:id="@+id/selectKeys"
+        android:icon="@android:drawable/ic_menu_manage"
+        android:title="@string/menu_selectKeys">
+    </item>
+    <item
+        android:id="@+id/preferences"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:title="@string/pref_preferences">
+    </item>
+    <item
+        android:id="@+id/about"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="@string/menu_about">
+    </item>
+    <item
+        android:id="@+id/help"
+        android:icon="@android:drawable/ic_menu_help"
+        android:title="@string/menu_help">
+    </item>
 
 </menu>
