improved uploading - uploading preferences redesign - moved service elements from EnCam to UploadService - delete after upload-function - possibility to retry uploading via menu entry

--- a/res/menu/mainmenu.xml
+++ b/res/menu/mainmenu.xml
@@ -21,5 +21,10 @@
         android:icon="@android:drawable/ic_menu_help"
         android:title="@string/menu_help">
     </item>
+    <item
+        android:id="@+id/uploads"
+        android:icon="@android:drawable/ic_menu_upload"
+        android:title="@string/menu_retryUpload">
+    </item>
 
 </menu>
